--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,3 +7,7 @@ spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url=jdbc:mysql://localhost:3306/pictopro
 spring.datasource.username=root
 spring.datasource.password=
+
+# App Properties
+picto.app.jwtSecret= pictoSecretKey
+picto.app.jwtExpirationMs= 86400000
