--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,6 +8,10 @@ spring.datasource.url=jdbc:mysql://localhost:3306/pictopro
 spring.datasource.username=root
 spring.datasource.password=
 
+# for Spring Boot 3
+spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.MySQLDialect
+
 # App Properties
+picto.app.jwtCookieName= picto
 picto.app.jwtSecret= pictoSecretKey
 picto.app.jwtExpirationMs= 86400000
