--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,16 +2,14 @@ spring.thymeleaf.enabled=true
 spring.thymeleaf.prefix=classpath:/templates/
 spring.thymeleaf.suffix=.html
 #spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.jdbc.DataSourceAutoConfiguration
-
-spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url=jdbc:mysql://localhost:3306/pictopro
 spring.datasource.username=root
 spring.datasource.password=
-
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.hibernate.ddl-auto=update
 # for Spring Boot 3
 spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.MySQLDialect
-
 # App Properties
 picto.app.jwtCookieName= picto
-picto.app.jwtSecret= pictoSecretKey
+picto.app.jwtSecret= ======================BezKoder=Spring===========================
 picto.app.jwtExpirationMs= 86400000
