deconnexion sur navbar

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,7 +10,7 @@ spring.jpa.hibernate.ddl-auto=update
 # for Spring Boot 3
 spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.MySQLDialect
 # App Properties
-picto.app.jwtCookieName= picto
-picto.app.jwtSecret= ======================BezKoder=Spring===========================
-picto.app.jwtExpirationMs= 86400000
+#picto.app.jwtCookieName= picto
+#picto.app.jwtSecret= ======================BezKoder=Spring===========================
+#picto.app.jwtExpirationMs= 86400000
 
