maj pom java version 19

--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,7 @@
     <description>Destinée aux établissements</description>
     <properties>
         <java.version>19</java.version>
+<!--        <java.version>17</java.version>-->
     </properties>
     <dependencies>
         <dependency>
