maj reset-password

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,3 +14,11 @@ spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.MySQLDialect
 #picto.app.jwtSecret= ======================BezKoder=Spring===========================
 #picto.app.jwtExpirationMs= 86400000
 
+# SMTP Server Configuration
+spring.mail.host=localhost
+spring.mail.port=1025
+spring.mail.username=your-email-username
+spring.mail.password=your-email-password
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+
