ajout pages error & accesRefuse

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,12 +7,9 @@ spring.datasource.username=root
 spring.datasource.password=
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
+
 # for Spring Boot 3
 spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.MySQLDialect
-# App Properties
-#picto.app.jwtCookieName= picto
-#picto.app.jwtSecret= ======================BezKoder=Spring===========================
-#picto.app.jwtExpirationMs= 86400000
 
 # SMTP Server Configuration
 spring.mail.host=localhost
@@ -22,3 +19,4 @@ spring.mail.password=your-email-password
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 
+server.error.whitelabel.enabled=false
