--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,10 +2,10 @@ spring.thymeleaf.enabled=true
 spring.thymeleaf.prefix=classpath:/templates/
 spring.thymeleaf.suffix=.html
 #spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.jdbc.DataSourceAutoConfiguration
-spring.datasource.url=jdbc:mysql://localhost:3306/pictopro //windows
-//spring.datasource.url=jdbc:mysql://localhost:8889/pictopro //mac
+spring.datasource.url=jdbc:mysql://localhost:3306/pictopro
+//spring.datasource.url=jdbc:mysql://localhost:8889/pictopro
 spring.datasource.username=root
-spring.datasource.password=
+spring.datasource.password=root
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
 
