--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,7 +5,7 @@ spring.thymeleaf.suffix=.html
 spring.datasource.url=jdbc:mysql://localhost:3306/pictopro
 //spring.datasource.url=jdbc:mysql://localhost:8889/pictopro
 spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.password=
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
 
