--- a/pom.xml
+++ b/pom.xml
@@ -137,6 +137,11 @@
             <artifactId>commons-fileupload</artifactId>
             <version>1.4</version>
         </dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <scope>test</scope>
+        </dependency>
         <!-- Mode développeur à supprimer pour la mise en prod -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
