--- a/pom.xml
+++ b/pom.xml
@@ -47,7 +47,7 @@
         <dependency>
             <groupId>org.thymeleaf</groupId>
             <artifactId>thymeleaf-spring5</artifactId>
-            <version>${thymeleaf.version}</version>
+            <version>3.0.12.RELEASE</version>
             <scope>compile</scope>
         </dependency>
         <dependency>
@@ -148,6 +148,16 @@
             <artifactId>spring-boot-devtools</artifactId>  <!-- Mode développeur à supprimer pour la mise en prod -->
             <optional>true</optional>
         </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-beans</artifactId>
+            <version>6.0.8</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.data</groupId>
+            <artifactId>spring-data-jpa</artifactId>
+            <version>3.0.5</version>
+        </dependency>
         <!-- Mode développeur à supprimer pour la mise en prod -->
     </dependencies>
     <build>
@@ -162,6 +172,11 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-war-plugin</artifactId>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-project-info-reports-plugin</artifactId>
+                <version>3.1.0</version>
             </plugin>
         </plugins>
     </build>
